--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
         .item{
             font-family: 'Bruno Ace', cursive;
+            font-size: medium;
             text-align: center;
 
             color: white;
