--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         .item{
             font-family: 'Bruno Ace', cursive;
-            font-size: medium;
+            font-size: smaller;
             text-align: center;
 
             color: white;
