--- a/media.html
+++ b/media.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+
+
+    <!-- https://www.codewithharry.com/tutorial/html-audio-video-tags/ -->
+    <!-- consider above link for more information -->
+
+
     <video src="https://player.vimeo.com/progressive_redirect/playback/850743621/rendition/360p/file.mp4?loc=external&oauth2_token_id=57447761&signature=3bd92faae4d3e3d58d081c4dee9bb31cd0e64fc1d4c9fb5f1deebee26961762c" height= auto controls 
     
     poster="https://images.unsplash.com/photo-1698089650324-a1b02d97b1fd?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw3fHx8ZW58MHx8fHx8"></video>
