--- a/MIX.html
+++ b/MIX.html
@@ -3,12 +3,139 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alignment</title>
+    <title>Front page</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Roboto:ital,wght@1,300&display=swap"
         rel="stylesheet">
+
+
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .navbar {
+            width: 90vw;
+            margin: auto;
+            display: flex;
+            flex-wrap: wrap;
+            /* Allow items to wrap onto the next line */
+            justify-content: space-between;
+            align-items: center;
+            background: linear-gradient(to right, #cc00c9, #00cc99);
+            padding: 1vw 2vw;
+            /* Increased padding for better spacing on small screens */
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+            border-bottom-left-radius: 1.5vw;
+            border-bottom-right-radius: 1.5vw;
+        }
+
+        .left-nav {
+            list-style: none;
+            display: flex;
+            margin: 0;
+            /* Remove default margin */
+            padding: 0;
+            /* Remove default padding */
+        }
+
+        .left-nav li {
+            margin-right: 20px;
+            position: relative;
+        }
+
+        .left-nav a {
+            text-decoration: none;
+            color: #fff;
+            font-weight: bold;
+            font-size: 18px;
+            transition: color 0.3s, border-bottom 0.3s;
+            padding-bottom: 5px;
+        }
+
+        .left-nav a::before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            bottom: 0;
+            left: 0;
+            background-color: white;
+            transform: scaleX(0);
+            transform-origin: right;
+            transition: transform 0.3s ease;
+        }
+
+        .left-nav a:hover {
+            color: black;
+        }
+
+        .left-nav a:hover::before {
+            transform: scaleX(1);
+        }
+
+        .search-container {
+            display: flex;
+            align-items: center;
+            margin-top: 10px;
+            /* Add some space between the navigation and search on small screens */
+        }
+
+        input[type="text"] {
+            padding: 5px;
+            border: none;
+            border-bottom: 2px solid #fff;
+            background-color: transparent;
+            color: #fff;
+            border-radius: 10px;
+            width: 100%;
+            /* Make the input take full width on small screens */
+            box-sizing: border-box;
+        }
+
+        button {
+            background-color: #ff6600;
+            color: #fff;
+            border: none;
+            padding: 5px 10px;
+            cursor: pointer;
+            border-radius: 10px;
+            margin-left: 10px;
+            /* Add some space between the input and button on small screens */
+        }
+
+        button:hover {
+            background-color: #ff9900;
+            border-radius: 15px;
+        }
+
+        @media (max-width: 768px) {
+
+            /* Adjust styles for screens with a maximum width of 768 pixels */
+            .navbar {
+                flex-direction: column;
+                /* Stack items vertically */
+                align-items: stretch;
+                /* Stretch items to full width */
+            }
+
+            .left-nav {
+                margin-top: 10px;
+                /* Add some space between items on small screens */
+                justify-content: center;
+                /* Center items horizontally */
+            }
+
+            .left-nav li {
+                margin-right: 0;
+                margin-bottom: 10px;
+                /* Add some space between items on small screens */
+            }
+        }
+    </style>
 
     <style>
         * {
@@ -29,7 +156,7 @@
 
             background-color: rgb(43, 42, 42);
 
-            margin: auto auto;
+            margin: 2% auto;
             /*spacing after text boundary/box*/
             padding: 1% 2%;
             /*spacing after text*/
@@ -60,7 +187,7 @@
             width: 49%;
             word-break: break-all;
             box-sizing: border-box;
-            margin: 1%;
+            margin: 2%;
         }
 
 
@@ -82,9 +209,24 @@
             word-break: break-all;
         }
     </style>
+
+
 </head>
 
 <body>
+    <nav class="navbar">
+        <ul class="left-nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Services</a></li>
+        </ul>
+        <div class="search-container">
+            <input type="text" placeholder="Search">
+            <button type="submit">Search</button>
+        </div>
+    </nav>
+
     <div class="container">
         <h1>Welcome to This </h1>
 
@@ -158,6 +300,7 @@
         </div>
 
     </div>
+
 
 </body>
 
