--- a/media.html
+++ b/media.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
 
 
@@ -12,23 +14,29 @@
     <!-- consider above link for more information -->
 
 
-    <video src="https://player.vimeo.com/progressive_redirect/playback/850743621/rendition/360p/file.mp4?loc=external&oauth2_token_id=57447761&signature=3bd92faae4d3e3d58d081c4dee9bb31cd0e64fc1d4c9fb5f1deebee26961762c" height= auto controls 
-    
-    poster="https://images.unsplash.com/photo-1698089650324-a1b02d97b1fd?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw3fHx8ZW58MHx8fHx8"></video>
+    <video
+        src="https://player.vimeo.com/progressive_redirect/playback/850743621/rendition/360p/file.mp4?loc=external&oauth2_token_id=57447761&signature=3bd92faae4d3e3d58d081c4dee9bb31cd0e64fc1d4c9fb5f1deebee26961762c"
+        height=auto controls
+        poster="https://images.unsplash.com/photo-1698089650324-a1b02d97b1fd?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw3fHx8ZW58MHx8fHx8"></video>
 
     <!-- <audio src="sachin.mp3" controls autoplay loop muted></audio> -->
 
     <svg height="100" width="100">
         <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
     </svg>
-    <img src="https://plus.unsplash.com/premium_photo-1697504578956-fdb28e11933c?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw1fHx8ZW58MHx8fHx8" alt="My Image">
+    <img src="https://plus.unsplash.com/premium_photo-1697504578956-fdb28e11933c?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw1fHx8ZW58MHx8fHx8"
+        alt="My Image">
 
     <!-- <iframe src="https://www.codewithharry.com/tutorial/html-iframes/" width="322" height="444"></iframe> -->
-    
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/XZwBNDGuWGU?si=8LLcy8rptrLhRbAU&amp;start=806" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/XZwBNDGuWGU?si=8LLcy8rptrLhRbAU&amp;start=806"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
 
     <!-- Quick Quiz  -->
     <!-- Create a website which shows videos of different category and audios of different categories.
     You can use YouTube videos in an iframe using YouTube's embedding feature -->
 </body>
+
 </html>
