--- a/new_navbar.html
+++ b/new_navbar.html
@@ -1,97 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nvbr</title>
 
     <style>
-    body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-}
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
 
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: linear-gradient(to right, #cc00c9, #00cc99); /* Gradient background */
-    padding: 10px 20px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
-}
+        .navbar {
+            width: 90vw;
+            margin: auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background: linear-gradient(to right, #cc00c9, #00cc99);
+            /* Gradient background */
+            padding: 0.7vw 1vw;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+            border-bottom-left-radius: 1.5vw;
+            border-bottom-right-radius: 1.5vw;
 
-.left-nav {
-    list-style: none;
-    display: flex;
-}
+        }
 
-.left-nav li {
-    margin-right: 20px;
-    position: relative; /* Add relative positioning */
-}
+        .left-nav {
+            list-style: none;
+            display: flex;
+        }
 
-.left-nav a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    font-size: 18px;
-    transition: color 0.3s, border-bottom 0.3s; /* Add border-bottom transition */
-    padding-bottom: 5px; /* Initial border position */
-}
+        .left-nav li {
+            margin-right: 20px;
+            position: relative;
+            /* Add relative positioning */
+        }
 
-.left-nav a::before { /* Create the line under the word */
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: white; /* Line color */
-    transform: scaleX(0); /* Initially invisible */
-    transform-origin: right;
-    transition: transform 0.3s ease;
-}
+        .left-nav a {
+            text-decoration: none;
+            color: #fff;
+            font-weight: bold;
+            font-size: 18px;
+            transition: color 0.3s, border-bottom 0.3s;
+            /* Add border-bottom transition */
+            padding-bottom: 5px;
+            /* Initial border position */
+        }
 
-.left-nav a:hover {
-    color: black; /* Change text color on hover */
-}
+        .left-nav a::before {
+            /* Create the line under the word */
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            bottom: 0;
+            left: 0;
+            background-color: white;
+            /* Line color */
+            transform: scaleX(0);
+            /* Initially invisible */
+            transform-origin: right;
+            transition: transform 0.3s ease;
+        }
 
-.left-nav a:hover::before {
-    transform: scaleX(1); /* Make the line visible on hover */
-}
+        .left-nav a:hover {
+            color: black;
+            /* Change text color on hover */
+        }
 
-.search-container {
-    display: flex;
-    align-items: center;
-}
+        .left-nav a:hover::before {
+            transform: scaleX(1);
+            /* Make the line visible on hover */
+        }
 
-input[type="text"] {
-    padding: 5px;
-    border: none;
-    border-bottom: 2px solid #fff;
-    background-color: transparent;
-    color: #fff;
-    border-radius: 10px;
-}
+        .search-container {
+            display: flex;
+            align-items: center;
+        }
 
-button {
-    background-color: #ff6600;
-    color: #fff;
-    border: none;
-    padding: 5px 10px;
-    cursor: pointer;
-    border-radius: 10px;
-}
+        input[type="text"] {
+            padding: 5px;
+            border: none;
+            border-bottom: 2px solid #fff;
+            background-color: transparent;
+            color: #fff;
+            border-radius: 10px;
+        }
 
-button:hover {
-    background-color: #ff9900;
-    border-radius: 15px;
-}
+        button {
+            background-color: #ff6600;
+            color: #fff;
+            border: none;
+            padding: 5px 10px;
+            cursor: pointer;
+            border-radius: 10px;
+        }
 
+        button:hover {
+            background-color: #ff9900;
+            border-radius: 15px;
+        }
     </style>
 </head>
+
 <body>
     <nav class="navbar">
         <ul class="left-nav">
@@ -105,9 +119,7 @@ button:hover {
             <button type="submit">Search</button>
         </div>
     </nav>
-    
+
 </body>
+
 </html>
-
-
-
