--- a/flexbaoxNAVBAR.html
+++ b/flexbaoxNAVBAR.html
@@ -9,19 +9,26 @@
     <style>
         * {
             padding: 0;
-            box-sizing: border-box;
         }
 
         nav {
+            height: 9vh;
+            width: 99vw;
             border: 2px solid purple;
             box-shadow: 8px 17px 6px #262525a1;
             border-radius: 0px 0px 35px 35px;
             /* top-left top-right bottom-right bottom-left */
+
+            /* border-bottom-left-radius: 35px;
+            border-bottom-right-radius: 35px; */
+
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
             align-items: center;
-            padding: 2px 15px 2px 15px;
+            /*used when we have single row otherwise align-content*/
         }
+
+
 
         .logo img {
             height: 8vh;
@@ -32,10 +39,8 @@
 
         .right ul {
             display: flex;
-            gap: 20px;
+            gap: 30px;
             list-style: none;
-            margin: 0;
-            padding: 0;
         }
 
         .right ul li {
@@ -44,6 +49,7 @@
             display: flex;
             align-items: center;
         }
+
 
         .right ul li div img {
             height: 7vh;
@@ -55,36 +61,11 @@
             text-decoration: underline dotted black;
         }
 
-        @media (max-width: 600px) {
-            nav {
-                border-top-right-radius: 10px;
-                border-bottom-right-radius: 10px;
-                border-bottom-left-radius: 0px;
-                width: 10vw;
-                height: auto;
-                flex-direction: column;
-                align-items: flex-start;
-            }
 
-            .right ul {
-                flex-direction: column;
-                align-items: flex-start;
-            }
 
-            .right ul li {
-                margin-bottom: 10px;
-            }
-                
-
-            .logo img {
-                display: none;
-            }
-
-            .right ul li div img {
-                display: none;
-            }
-        }
     </style>
+
+
 </head>
 
 <body>
