--- a/CSS_position.html
+++ b/CSS_position.html
@@ -2,6 +2,96 @@
 <html lang="en">
 
 <head>
+    <!-- Set character set and viewport for responsiveness -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Set the title of the page -->
+    <title>CSS Position</title>
+    <!-- Define the CSS styles -->
+    <style>
+        /* Apply default margin and padding to all elements */
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Define a common style for boxes */
+        .box {
+            height: 333px;
+            width: 80vw;
+            padding: 3px;
+            margin: 3px;
+            border: 2px solid black;
+        }
+
+        /* Style for the first box with aqua background */
+        .box1 {
+            background-color: aqua;
+            /* Set position to absolute, fix it at the top, and push it slightly from the left */
+            position: relative;
+            z-index: 1;
+            /*bcoz of this it will overlap box2*/
+            top: 0px;
+            left: 3px;
+        }
+
+        /* Style for the second box with azure background */
+        .box2 {
+
+            top: -39px;
+            left: 55px;
+            position: relative;
+            background-color: azure;
+            /* No specific positioning, it will be in normal flow */
+        }
+
+        /* Style for the third box with antiquewhite background */
+        .box3 {
+            background-color: antiquewhite;
+            /* Set position to fixed, fix it at the bottom, and push it from the left */
+            position: fixed;
+            bottom: 0px;
+            left: 8vw;
+            height: 111px;
+        }
+
+        /* Style for the fourth box with purple background */
+        .box4 {
+            background-color: purple;
+            /* No specific positioning, it will be in normal flow */
+        }
+
+        /* Style for the parent container with padding, margin, and a purple border */
+        .parent {
+            padding: 43px;
+            margin: 34px;
+            border: 3px solid purple;
+            /* No specific positioning, it will be in normal flow */
+        }
+    </style>
+</head>
+
+<body>
+    <!-- Parent container that holds all the boxes -->
+    <div class="parent">
+        <!-- Four boxes with different styles -->
+        <div class="box box1"></div>
+        <div class="box box2"></div>
+        <div class="box box3"></div>
+        <div class="box box4"></div>
+    </div>
+</body>
+
+</html>
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Position</title>
@@ -77,7 +167,8 @@
     </div>
 </body>
 
-</html>
+</html> -->
+
 
 
 
