--- a/CSS_Transform.html
+++ b/CSS_Transform.html
@@ -33,6 +33,7 @@
 
             /* transform: translate(45%); */
             /* transform: translate(70px); */
+            transform: translateX(45px) translateY(45px);
             
 
 
