--- a/test.html
+++ b/test.html
@@ -1,137 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flexbox Navbar</title>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sidebar Example</title>
     <style>
-        * {
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        nav {
-            border: 2px solid purple;
-            box-shadow: 8px 17px 6px #262525a1;
-            border-radius: 0px 0px 35px 35px;
-            /* top-left top-right bottom-right bottom-left */
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 2px 15px 2px 15px;
-        }
-
-        .logo img {
-            height: 8vh;
-            width: auto;
-            border-radius: 23px;
-            box-shadow: 10px 7px 10px 0px #a0a0a0;
-        }
-
-        .right ul {
-            display: flex;
-            gap: 20px;
-            list-style: none;
+        body {
             margin: 0;
-            padding: 0;
+            font-family: Arial, sans-serif;
         }
 
-        .right ul li {
-            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-            font-weight: 600;
-            display: flex;
-            align-items: center;
+        #sidebar {
+            height: 100vh;
+            width: 0;
+            position: fixed;
+            top: 0;
+            left: 0;
+            background-color: #111;
+            overflow-x: hidden;
+            transition: 0.5s;
+            padding-top: 60px;
+            z-index: 1;
         }
 
-        .right ul li div img {
-            height: 7vh;
+        #sidebar a {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 18px;
+            color: #818181;
+            display: block;
+            transition: 0.3s;
         }
 
-        .right ul li:hover {
-            color: rgb(216, 65, 116);
-            font-weight: 500;
-            text-decoration: underline dotted black;
+        #sidebar a:hover {
+            color: #f1f1f1;
         }
 
-        @media (max-width: 600px) {
-            nav {
-                border-top-right-radius: 10px;
-                border-bottom-right-radius: 10px;
-                border-bottom-left-radius: 0px;
-                width: 10vw;
-                height: auto;
-                flex-direction: column;
-                align-items: flex-start;
-            }
+        #main {
+            transition: margin-left .5s;
+            padding: 16px;
+            margin-left: 0; /* Add this line to prevent overlap */
+            padding-left: 20px; /* Adjust padding for content */
+        }
 
-            .right ul {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
-            .right ul li {
-                margin-bottom: 10px;
-            }
-                
-
-            .logo img {
-                display: none;
-            }
-
-            .right ul li div img {
-                display: none;
-            }
+        #open-btn {
+            font-size: 30px;
+            cursor: pointer;
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            z-index: 2;
         }
     </style>
 </head>
-
 <body>
-    <header>
-        <nav>
-            <div class="logo">
-                <img src="https://static.vecteezy.com/system/resources/thumbnails/002/087/843/small/abstract-and-classic-globe-logo-icon-circular-rotation-logo-simple-and-elegant-earth-rotation-logo-free-vector.jpg"
-                    alt="" class="front" />
-            </div>
 
-            <div class="right">
-                <ul>
-                    <li>
-                        <span>Product </span>
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M18 9.00005C18 9.00005 13.5811 15 12 15C10.4188 15 6 9 6 9" stroke="#141B34"
-                                stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                    </li>
-                    <li>
-                        <span>Pricing </span>
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M18 9.00005C18 9.00005 13.5811 15 12 15C10.4188 15 6 9 6 9" stroke="#141B34"
-                                stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                    </li>
-                    <li>
-                        <span>Resources </span>
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M18 9.00005C18 9.00005 13.5811 15 12 15C10.4188 15 6 9 6 9" stroke="#141B34"
-                                stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                    </li>
-                    <li>
-                        <span>AboutUs </span>
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M18 9.00005C18 9.00005 13.5811 15 12 15C10.4188 15 6 9 6 9" stroke="#141B34"
-                                stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                        <div>
-                            <img src="https://static.thenounproject.com/png/5024802-200.png" alt="" />
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+<div id="sidebar">
+    <a href="#" onclick="closeNav()">Close</a>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+</div>
+
+<div id="main">
+    <span id="open-btn" onclick="openNav()">&#9776; Open</span>
+</div>
+
+<script>
+    function openNav() {
+        document.getElementById("sidebar").style.width = "250px";
+        document.getElementById("main").style.marginLeft = "250px";
+    }
+
+    function closeNav() {
+        document.getElementById("sidebar").style.width = "0";
+        document.getElementById("main").style.marginLeft = "0";
+    }
+</script>
+
 </body>
-
 </html>
